--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,10 @@ html{
 #header .search-btn{
     float: right;
 }
+#header .menu-btn{
+    display: none;
+}
+
 #header .menu-btn,
 #header .search-btn .search-icon{
     color: #fff;
