--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,21 @@
+@media only screen and (max-width: 1023px){
+    #footer .social-list a{
+        font-size: 40px;
+        margin: 0px 12px;
+    }
+    #footer .copyright a{
+        padding: 18px 7px;
+    display: inline-block;
+    }
+}
+
 @media only screen and (max-width: 739px) {
-    .s-col-full{
+    .s-col-full,
+    .s-full-width{
         width: 100%;
+    }
+    .s-mt-8{
+        margin-top: 8px;
     }
     #header{
         overflow: hidden;
@@ -34,6 +49,9 @@
     }
     #content .member-img{
         width: 60%;
+    }
+    .contact-form{
+        margin-top: 16px;
     }
   }
   
