--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 1023px){
     #footer .social-list a{
         font-size: 40px;
-        margin: 0px 12px;
+        margin: 0px 1.9%;
     }
     #footer .copyright a{
         padding: 18px 7px;
